
Gameplay changes
================
- Improved infravision to allow it to see walls and stuff but not take actions
that require light.
- Weak pseudo-id can now detect average items.
- Fixed unlight bug, now grants +3 stealth in light and +6 in darkness
as it is supposed to.
- Unlight now grants +2 infra-vision range.
- Fixed bug where armory instead of general store had low purse.

User interface
==============
- Highlight spell stat when choosing a character.
- Added x11-settings.prf support to main-x11.
- Show the effects of Clarity and Atheletics a bit better in character screen.
- Show the power of beguiling spells in spellbooks (slow, sleep,
confusion and fear), to encourage their use.
- Inscribe drops from uniques.
- Added monster list window.
- Removed Acorn port.
- Removed VM/ESA port.
- Removed Amiga port.
- Removed Linux SVGALib port.
- Removed OS/2 EMX port.
- Removed termcap port.
- Removed check_load & check_time code.
- Removed X11 Athena widgets port.
- Removed MS/DOS ports.
- Transparency is turned on permanently.
- Removed extra main-mac-carbon file.
- Added more basic colors, to get the same number a V.
- Only allow change of /lib/user with command-line option.
- Removed hilite_player option. (Always off)
- Moved crown to external file.
- Removed macros.

Coding changes
==============
- Clean up X11 stuff on exit.
- Added missing depcomp.
- Removed files modified by autobuild system from repository.
- Fixed warning in acinclude.m4.
- Slight clean ups in birth.c.
- Slight clean ups in main-x11.c.
- Cleaned up and merged the h-xxx.h files into h-basic.h.
- Cleaned up terminal handling, use POSIX instead of old methods.
- Cleaned up z-form and z-util a bit. Core  function removed.
- Trimming down a number of compile-time options.
- Cleaned up setuid code a bit, started on z-file.
- Removed support for savefiles older than Angband 2.7.0.
- Clean ups in main-gcu.c.
- Removed unused Term_user.
- Started upgrading z-form to Vanilla standard.